Fixed modal layout bug in chrome

--- a/src/components/Item.scss
+++ b/src/components/Item.scss
@@ -109,7 +109,7 @@
   margin-top: 26.4px;
   width: 120px;
   height: 120px;
-
+  flex-shrink: 0;
   position: relative;
   display: inline-block;
   overflow: hidden;
